<resources>
    <string name="app_name">Android Warehouse</string>
    <string name="text_holder_demo">Posible Demo</string>

    <string name="title_activity_storage_manager">Storage Manager</string>
    <string name="et_fruit_hint">Escribime una fruta que te guste!</string>
    <string name="bt_add_fruit">Agregar Fruta</string>
    <string name="list_fruits_activity_storage_manager">Lista de Frutas que te gustan</string>
    <string name="list_fruits_holder_activity_storage_manager">La lista esta vacía! agregá una :)</string>

    <string name="title_activity_bitmap_b64">Bitmap - B64</string>

    <string name="title_activity_location">Location Demo</string>
    <string name="lat">Latitud</string>
    <string name="lng">Longitud</string>
    <string name="location_disabled">Geolocalización desactivada!</string>

    <string name="title_activity_simple_camera">Simple Camera Demo</string>
    <string name="bt_take_picture">Tomar Foto</string>
    <string name="bt_cat_request">Dame una buena foto de gatitos</string>
    <string name="text_time">El tiempo es oro, y lo estas perdiendo cada segundo que lees este mensaje aburrido. Lo siento :D</string>
    <string name="text_human">La salud es importante, asi que deja de comer en KFC (recordatorio para mi yo del futuro)</string>
    <string name="text_notes">Toma nota de las cosas que quieres hacer este año! El tiempo pasa volando :)</string>
</resources>
